fix: adjusting spacing between components

--- a/vite-project/src/Component/About/About-style.css
+++ b/vite-project/src/Component/About/About-style.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    margin-bottom: 80px;
 }
 /* Agora, dentro da classe about-content, defino também que os itens vão se organizar em coluna */
 .about-content{
