--- a/vite-project/src/Component/Main/Main-style.css
+++ b/vite-project/src/Component/Main/Main-style.css
@@ -1,6 +1,7 @@
 .main-container{
     display: flex;
     height: 80vh;
+    margin-bottom: 80px;
 }
 .main-content{
     width: 100%;
