--- a/vite-project/src/Component/Projects/Projects-style.css
+++ b/vite-project/src/Component/Projects/Projects-style.css
@@ -1,5 +1,6 @@
 .section-projects{
     height: 100vh;
+    margin-bottom: 80px;
 }
 
 .section-projects-content{
